# swe-bench-agent

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/_report/: research_report.md
docs/test_results/: coverage_summary.txt  pytest_output.txt  quality_gates.txt
src/sba/: __init__.py  runner.py  types.py
src/sba/agent/: policy.py
src/sba/cli/: main.py
src/sba/tasks/: synthetic.py
src/sba/validator/: check.py
src/sba/viz/: charts.py
tests/: test_agent.py  test_runner.py  test_tasks.py  test_validator.py
